My solution. Step 4 background z-index fix is not pretty.

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -8,6 +8,7 @@
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +25,12 @@
 }
 
 .characterWrapper {
+  width: 35%;
+  position: fixed;
+  top: 128px;
+  right: 0;
 }
 
 .controlColumn {
+  width: 50%;
 }
