--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,13 @@ body {
   padding: 0;
   border: 0;
 }
+
+.global-background {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 60%;
+  bottom: 0;
+  background-color: hsl(195deg, 20%, 86%);
+  z-index: -1;
+}
